Fixed Gyoza card disappearing on mobile view and removed empty list item in starter pricing

--- a/css/queries.css
+++ b/css/queries.css
@@ -274,6 +274,7 @@
   .step-img-box {
     transform: translateY(2.4rem);
   }
+
   .testimonials {
     grid-template-columns: 1fr;
   }
@@ -298,6 +299,14 @@
 
   .pricing-plan--complete::after {
     right: -14%;
+  }
+
+  .pricing-plan--starter .list .list-item:last-child {
+    display: none;
+  }
+
+  .diets {
+    grid-column: span 1;
   }
 }
 
